Vis: Process Dissipation: flow property changes (#236)

--- a/app/index.html
+++ b/app/index.html
@@ -62,6 +62,7 @@
     <script src="components/name/name-service.js"></script>
     <script src="components/param-grid/param-grid-directive.js"></script>
     <script src="components/reference-link/reference-link-directive.js"></script>
+    <script src="components/resources/flow-property-magnitude-extension.js"></script>
     <script src="components/resources/lcia-method-extension.js"></script>
     <script src="components/resources/resource-service.js"></script>
     <script src="components/sankey/sankey-directive.js"></script>
