Vis: Process Dissipation: fix problems (WIP on #236)

--- a/app/process-instance/process-instance.html
+++ b/app/process-instance/process-instance.html
@@ -36,7 +36,7 @@
         <param-grid options="options" data="fragmentFlows" columns="columns" params="params"></param-grid>
     </div>
 </div>
-<div class="panel panel-default" ng-show="paramGrid.dissipation">
+<div class="panel panel-default" ng-if="paramGrid.dissipation">
     <div class="panel-heading">
         <span class="panel-title">Dissipation of Composition Profile</span>
         <span class="pull-right">
