Vis: Process Dissipation: param grid (#236)

--- a/app/process-instance/process-instance.html
+++ b/app/process-instance/process-instance.html
@@ -40,10 +40,10 @@
     <div class="panel-heading">
         <span class="panel-title">Dissipation of Composition Profile</span>
         <span class="pull-right">
-            <change-buttons2 canApply="paramGrid.dissipation.canApply"
-                            applyChanges="paramGrid.dissipation.applyChanges"
-                            canRevert="paramGrid.dissipation.canRevert"
-                            revertChanges="paramGrid.dissipation.revertChanges">
+            <change-buttons2 can-apply="paramGrid.dissipation.canApply()"
+                            apply-changes="paramGrid.dissipation.applyChanges()"
+                            can-revert="paramGrid.dissipation.canRevert()"
+                            revert-changes="paramGrid.dissipation.revertChanges()">
             </change-buttons2>
         </span>
     </div>
