--- a/app/process-flow-param/process-flow-param.html
+++ b/app/process-flow-param/process-flow-param.html
@@ -14,7 +14,11 @@
     <div>
         <span class="pull-right">
             <button type="button" ng-disabled="!canReturn()" ui-sref="^" class="btn btn-link btn-sm">Back to Process LCIA</button>
-            <change-buttons></change-buttons>
+            <change-buttons can-apply="canApply()"
+                            apply-changes="applyChanges()"
+                            can-revert="canRevert()"
+                            revert-changes="revertChanges()">
+            </change-buttons>
         </span>
     </div>
 </div>
