Vis: Scenario detail: description style

--- a/app/scenario/scenario-detail.html
+++ b/app/scenario/scenario-detail.html
@@ -20,7 +20,7 @@
             <dt>Reference Unit</dt>
             <dd>{{unit}}</dd>
             <dt>Description</dt>
-            <dd><textarea readonly style="width: 800px; height: 150px" class="scenario-description">{{scenario["description"]}}</textarea></dd>
+            <dd><pre class="scenario-description">{{scenario["description"]}}</pre></dd>
         </dl>
     </div>
 </div>
