Vis: Composition Profiles: Create view and param grid (WIP for #235)

--- a/app/index.html
+++ b/app/index.html
@@ -78,6 +78,7 @@
     <script src="config.js"></script>
     <script src="app.js"></script>
     <script src="home/home.js"></script>
+    <script src="composition-profiles/composition-profiles.js"></script>
     <script src="fragment-lcia/fragment-lcia.js"></script>
     <script src="fragment-sankey/fragment-sankey.js"></script>
     <script src="lcia-method/lcia-method-detail.js"></script>
