Vis: Composition Profiles: debug controller (#235)

--- a/app/index.html
+++ b/app/index.html
@@ -103,6 +103,7 @@
                 <li ui-sref-active="active"><a ui-sref="home.fragment-lcia">Fragment LCIA</a></li>
                 <li ui-sref-active="active"><a ui-sref="home.process-lcia">Process LCIA</a></li>
                 <li ui-sref-active="active"><a ui-sref="home.fragment-sankey">Fragment Flows</a></li>
+                <li ui-sref-active="active"><a ui-sref="home.composition-profiles">Composition Profiles</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li>
