--- a/app/process-instance/process-instance.html
+++ b/app/process-instance/process-instance.html
@@ -42,7 +42,12 @@
 </div>
 <div class="panel panel-default" ng-if="paramGrid.dissipation">
     <div class="panel-heading">
-        <span class="panel-title">Dissipation of Composition Profile</span>
+        <span class="panel-title">
+            Dissipation of
+            <a class="btn-link" ui-sref="home.composition-profiles({scenarioID: scenario.scenarioID, flowID: process.compositionFlowID})">
+            Composition Profile
+            </a>
+        </span>
         <span class="pull-right">
             <change-buttons can-apply="paramGrid.dissipation.canApply()"
                             apply-changes="paramGrid.dissipation.applyChanges()"
