Vis: Process LCIA : Add geography to listed processes (#219)

--- a/app/index.html
+++ b/app/index.html
@@ -64,6 +64,7 @@
     <script src="components/reference-link/reference-link-directive.js"></script>
     <script src="components/resources/flow-property-magnitude-extension.js"></script>
     <script src="components/resources/lcia-method-extension.js"></script>
+    <script src="components/resources/process-extension.js"></script>
     <script src="components/resources/resource-service.js"></script>
     <script src="components/sankey/sankey-directive.js"></script>
     <script src="components/sankey/sankey-service.js"></script>
