--- a/app/scenario/scenario-detail.html
+++ b/app/scenario/scenario-detail.html
@@ -7,7 +7,7 @@
     <div class="panel-body">
         <dl class="dl-horizontal">
             <dt>Name</dt>
-            <dd>{{scenario["name"]}}</dd>
+            <dd>{{scenario.name}}</dd>
             <dt>Top Level Fragment</dt>
             <dd><a ui-sref="home.fragment-sankey({scenarioID: scenario.scenarioID, fragmentID: scenario.topLevelFragmentID})">
                 {{fragment.name}}
@@ -20,7 +20,7 @@
             <dt>Reference Unit</dt>
             <dd>{{unit}}</dd>
             <dt>Description</dt>
-            <dd><pre class="scenario-description">{{scenario["description"]}}</pre></dd>
+            <dd><pre class="scenario-description">{{scenario.description}}</pre></dd>
         </dl>
     </div>
 </div>
