--- a/app/fragment-sankey/fragment-sankey.html
+++ b/app/fragment-sankey/fragment-sankey.html
@@ -39,7 +39,7 @@
     <div class="col-md-2">
         <button type="button" class="btn btn-link pull-right"
                 ui-sref=".fragment-lcia({scenarioID: scenario.scenarioID, fragmentID: scenario.topLevelFragmentID})">
-            Display LCIA Results
+            Show Fragment LCIA
         </button>
     </div>
 </div>
