Vis: Process Instance: Display flow name in composition profile link (#236)

--- a/app/process-instance/process-instance.html
+++ b/app/process-instance/process-instance.html
@@ -45,7 +45,7 @@
         <span class="panel-title">
             Dissipation of
             <a class="btn-link" ui-sref="home.composition-profiles({scenarioID: scenario.scenarioID, flowID: process.compositionFlowID})">
-            Composition Profile
+            {{compositionFlow.name}}
             </a>
         </span>
         <span class="pull-right">
