--- a/app/fragment-sankey/fragment-sankey.html
+++ b/app/fragment-sankey/fragment-sankey.html
@@ -1,7 +1,8 @@
 <!-- Partial html for fragment sankey view -->
 <div class="row">
-    <div class="col-md-8">
     <info ng-show="displayInfo">{{infoMsg.fragmentSankey.msg}}</info>
+    <info ng-show="displayInfo">{{infoMsg.fragmentSankey.msg2}}</info>
+    <div class="col-md-8">
         <dl class="dl-horizontal">
             <dt>Scenario</dt>
             <dd>
