--- a/app/home/home.html
+++ b/app/home/home.html
@@ -1,5 +1,8 @@
 <!-- Partial html for home page -->
 <info ng-show="displayInfo">{{infoMsg.home.msg}}</info>
+<info ng-show="displayInfo">{{infoMsg.home.msg2}}</info>
+<info ng-show="displayInfo">{{infoMsg.home.msg3}}</info>
+<info ng-show="displayInfo">{{infoMsg.home.help}}</info>
 <div class="panel panel-default">
     <div class="panel-heading">
         <span class="panel-title">Scenarios</span>
@@ -7,6 +10,7 @@
         <div class="clearfix"></div>
     </div>
     <info ng-show="displayInfo">{{infoMsg.home.scenarios.msg}}</info>
+    <info ng-show="displayInfo">{{infoMsg.home.scenarios.msg2}}</info>
     <table class="table table-condensed">
         <thead>
         <tr>
