--- a/app/scenario/scenario-detail.html
+++ b/app/scenario/scenario-detail.html
@@ -5,6 +5,7 @@
             <div class="clearfix"></div>
         </div>
     <div class="panel-body">
+    <info ng-show="displayInfo">{{infoMsg.home.scenarios.detail}}</info>
         <dl class="dl-horizontal">
             <dt>Name</dt>
             <dd>{{scenario.name}}</dd>
@@ -36,6 +37,13 @@
         </span>
     </div>
     <div class="panel-body">
+    <info ng-show="displayInfo">{{infoMsg.home.scenarios.params}}</info>
         <param-grid options="options" data="gridData" columns="gridColumns" params="params"></param-grid>
     </div>
+    <info ng-show="displayInfo">{{infoMsg.home.scenarios.paramTypes}}</info>
+    <info ng-show="displayInfo">{{infoMsg.home.scenarios.ffParam}}</info>
+    <info ng-show="displayInfo">{{infoMsg.home.scenarios.fpParam}}</info>
+    <info ng-show="displayInfo">{{infoMsg.home.scenarios.peParam}}</info>
+    <info ng-show="displayInfo">{{infoMsg.home.scenarios.pdParam}}</info>
+    <info ng-show="displayInfo">{{infoMsg.home.scenarios.lcParam}}</info>
 </div>
