--- a/app/process-flow-param/process-flow-param.html
+++ b/app/process-flow-param/process-flow-param.html
@@ -1,6 +1,7 @@
 <!-- Partial html for process LCIA view -->
 <div>
-    <h4>LCIA Flow Details</h4>
+    <info ng-show="displayInfo">{{infoMsg.processFlowParam.msg}}</info>
+    <h4>Process Emission Details</h4>
     <dl class="dl-horizontal">
         <dt>Scenario</dt>
         <dd>{{scenario.name}}</dd>
@@ -28,6 +29,7 @@
         <span class="panel-title">Emission</span>
     </div>
     <div class="panel-body">
+      <info ng-show="displayInfo">{{infoMsg.processFlowParam.emission}}</info>
         <param-grid options="emission.options" data="emission.flows" columns="emission.columns" params="emission.params"></param-grid>
     </div>
 </div>
@@ -36,6 +38,7 @@
         <span class="panel-title">Dissipation</span>
     </div>
     <div class="panel-body">
+      <info ng-show="displayInfo">{{infoMsg.processFlowParam.dissipation}}</info>
     <param-grid options="dissipation.options" data="dissipation.flows" columns="dissipation.columns" params="dissipation.params"></param-grid>
     </div>
 </div>
