--- a/app/scenario/scenario-detail.html
+++ b/app/scenario/scenario-detail.html
@@ -38,6 +38,7 @@
     </div>
     <div class="panel-body">
     <info ng-show="displayInfo">{{infoMsg.home.scenarios.params}}</info>
+    <info ng-show="displayInfo">{{infoMsg.sort}}</info>
         <param-grid options="options" data="gridData" columns="gridColumns" params="params"></param-grid>
     </div>
     <info ng-show="displayInfo">{{infoMsg.home.scenarios.paramTypes}}</info>
