--- a/app/fragment-sankey/fragment-sankey.html
+++ b/app/fragment-sankey/fragment-sankey.html
@@ -60,6 +60,7 @@
     </div>
     <div class="panel-body">
       <info ng-show="displayInfo">{{infoMsg.fragmentSankey.fragmentFlows.msg}}</info>
+      <info ng-show="displayInfo">{{infoMsg.sort}}</info>
         <param-grid options="options" data="gridFlows" columns="columns" params="params"></param-grid>
     </div>
 </div>
