Revise and close #231

--- a/app/composition-profiles/composition-profiles.html
+++ b/app/composition-profiles/composition-profiles.html
@@ -1,5 +1,5 @@
 <div>
-    <info ng-show="displayInfo">{{infoMsg.compositionProfile.msg}}</info>
+    <info>{{infoMsg.compositionProfile.msg}}</info>
     <dl class="dl-horizontal">
         <dt>Composition Flow</dt>
         <dd>
@@ -22,8 +22,8 @@
         <span class="panel-title">Flow Property Magnitudes</span>
     </div>
     <div class="panel-body">
-    <info ng-show="displayInfo">{{infoMsg.compositionProfile.content}}</info>
-    <info ng-show="displayInfo">{{infoMsg.compositionProfile.ncv}}</info>
+    <info>{{infoMsg.compositionProfile.content}}</info>
+    <info>{{infoMsg.compositionProfile.ncv}}</info>
         <label for="selectScenario">Scenario</label>
         <select id="selectScenario" ng-model="scenario"
                 ng-options="s.name for s in scenarios"
