--- a/app/process-instance/process-instance.html
+++ b/app/process-instance/process-instance.html
@@ -1,7 +1,7 @@
 <!-- Partial html for Process Instance view -->
 
 
-<info ng-show="displayInfo">{{infoMsg.processInstance.msg}}</info>
+<info>{{infoMsg.processInstance.msg}}</info>
 <h4>Process Instance</h4>
 <dl class="dl-horizontal">
     <dt>Scenario</dt>
@@ -36,9 +36,9 @@
             </change-buttons>
         </span>
     </div>
-    <info ng-show="displayInfo">{{infoMsg.processInstance.flows}}</info>
-    <info ng-show="displayInfo">{{infoMsg.processInstance.balance}}</info>
-    <info ng-show="displayInfo">{{infoMsg.sort}}</info>
+    <p class="desc">{{infoMsg.processInstance.flows}} {{infoMsg.sort}}</p>
+    <info>{{infoMsg.processInstance.flows1}}</info>
+    <info>{{infoMsg.processInstance.balance}}</info>
     <div class="panel-body">
         <param-grid options="options" data="fragmentFlows" columns="columns" params="params"></param-grid>
     </div>
@@ -60,9 +60,9 @@
         </span>
     </div>
     <div class="panel-body">
-    <info ng-show="displayInfo">{{infoMsg.processInstance.dissipation}}</info>
-    <info ng-show="displayInfo">{{infoMsg.processInstance.diss2}}</info>
-    <info ng-show="displayInfo">{{infoMsg.sort}}</info>
+    <p class="desc">{{infoMsg.processInstance.dissipation}} {{infoMsg.sort}}</p>
+    <info>{{infoMsg.processInstance.diss1}}</info>
+    <info>{{infoMsg.processInstance.diss2}}</info>
         <param-grid options="paramGrid.dissipation.options"
                     data="paramGrid.dissipation.data"
                     columns="paramGrid.dissipation.columns"
@@ -75,7 +75,7 @@
         <span class="panel-title">Process LCIA</span>
     </div>
     <div class="panel-body">
-      <info ng-show="displayInfo">{{infoMsg.processInstance.lcia}}</info>
+      <info>{{infoMsg.processInstance.lcia}}</info>
         <span>{{lciaMsg}}</span>
         <ul class="list-unstyled">
             <li ng-repeat="method in lciaMethods" class="lcia-method">
