--- a/app/process-lcia/process-lcia.html
+++ b/app/process-lcia/process-lcia.html
@@ -1,6 +1,6 @@
 <!-- Partial html for process LCIA view -->
 <div class="row">
-    <info ng-show="displayInfo">{{infoMsg.processLcia.msg}}</info>
+    <info>{{infoMsg.processLcia.msg}}</info>
     <div class="col-md-8">
         <div ng-if="activityLevel">
         <h4>Process LCIA</h4>
@@ -48,7 +48,7 @@
         </dl>
         </div>
 
-	<info ng-show="displayInfo">{{infoMsg.processInstance.lcia}}</info>
+	<info>{{infoMsg.processInstance.lcia}}</info>
         <ul class="list-unstyled">
             <li ng-repeat="method in lciaMethods" class="lcia-method">
                 <div class="panel panel-default">
@@ -77,7 +77,7 @@
         </ul>
     </div>
     <div class="col-md-4">
-    <info ng-show="displayInfo">{{infoMsg.processLcia.flows}}</info>
+    <info>{{infoMsg.processLcia.flows}}</info>
         <div class="flow-container" ng-show="flowsVisible">
             <label>Input Flows</label>
             <table class="table">
