--- a/app/index.html
+++ b/app/index.html
@@ -57,6 +57,7 @@
     <script src="components/lcia-detail/lcia-bar-directive.js"></script>
     <script src="components/lcia-detail/lcia-detail-service.js"></script>
     <script src="components/modal/modal-confirm.js"></script>
+    <script src="components/models/lcia-model-service.js"></script>
     <script src="components/models/param-model-service.js"></script>
     <script src="components/models/scenario-model-service.js"></script>
     <script src="components/name/name-service.js"></script>
