--- a/app/index.html
+++ b/app/index.html
@@ -43,7 +43,7 @@
     <script src="bower_components/spin.js/spin.js"></script>
     <script src="bower_components/array.prototype.find/index.js"></script>
     <script src="bower_components/ng-csv/build/ng-csv.min.js"></script>
-    <script src="bower_components/ng-grid/build/ng-grid.min.js"></script>
+    <script src="bower_components/ng-grid/build/ng-grid.js"></script>
     <script src="bower_components/ng-grid/plugins/ng-grid-flexible-height.js"></script>
 
     <script src="components/change-buttons/change-buttons-directive.js"></script>
