LCIA Comparison: partial html and controller (#8)

--- a/app/index.html
+++ b/app/index.html
@@ -83,6 +83,7 @@
     <script src="composition-profiles/composition-profiles.js"></script>
     <script src="fragment-lcia/fragment-lcia.js"></script>
     <script src="fragment-sankey/fragment-sankey.js"></script>
+    <script src="lcia-comparison/lcia-comparison.js"></script>
     <script src="lcia-method/lcia-method-detail.js"></script>
     <script src="process-flow-param/process-flow-param.js"></script>
     <script src="process-instance/process-instance.js"></script>
