--- a/app/index.html
+++ b/app/index.html
@@ -62,6 +62,8 @@
     <script src="components/models/scenario-model-service.js"></script>
     <script src="components/name/name-service.js"></script>
     <script src="components/param-grid/param-grid-directive.js"></script>
+    <script src="components/plot/plot-directive.js"></script>
+    <script src="components/plot/plot-service.js"></script>
     <script src="components/reference-link/reference-link-directive.js"></script>
     <script src="components/resources/flow-property-magnitude-extension.js"></script>
     <script src="components/resources/lcia-method-extension.js"></script>
