--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
 <!--[if IE 8]>
 <html lang="en" ng-app="lcaApp" class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!-->
+<!--suppress HtmlUnknownTarget -->
 <html lang="en" ng-app="lcaApp" class="no-js"> <!--<![endif]-->
 <head>
     <meta charset="utf-8">
@@ -112,7 +113,7 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                <button title="Toggle Information Messages" type="button" ng-class="{btn:true, 'navbar-btn':true, 'btn-primary':displayInfo, active:displayInfo}" data-toggle="button" ng-click="displayInfo=!displayInfo" aria-pressed="{{displayInfo}}">
+                <button title="Toggle Information Messages" type="button" ng-class="{btn:true, 'navbar-btn':true, 'btn-info':displayInfo, active:displayInfo}" data-toggle="button" ng-click="displayInfo=!displayInfo" aria-pressed="{{displayInfo}}">
                     <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
                 </button>
                 </li>
