Plot: handle svg size change (#8)

--- a/app/lcia-comparison/lcia-comparison.html
+++ b/app/lcia-comparison/lcia-comparison.html
@@ -52,7 +52,7 @@
                 <p>{{method.referenceFlowProperty.name}}</p>
             </div>
             <div class="panel-body">
-                <svg>
+                <svg class="plot-container">
                     <plot config="plot.config[method.lciaMethodID]" data="plot.data[method.lciaMethodID]"></plot>
                   </svg>
               </div>
