--- a/app/lcia-comparison/lcia-comparison.html
+++ b/app/lcia-comparison/lcia-comparison.html
@@ -24,22 +24,20 @@
         </select>
     </div>
     <button type="submit" class="btn btn-default" ng-click="selection.add()" aria-label="Add"
-            title="Add to LCIA selections">
+            title="Display LCIA results">
         Add
     </button>
 </form>
 </div>
 <div class="panel panel-default">
-    <div class="panel-heading">
-        <span class="panel-title" title="Components selected for LCIA comparison">LCIA selections</span>
-        <button type="button" class="btn btn-sm btn-success pull-right" title="Click to display LCIA results"
-                ng-disabled="invalidSelection()" ng-click="plot.getResults()">
-            Display Results
-        </button>
-    </div>
-    <div class="panel-body">
+    <!--<div class="panel-heading">-->
+        <!--<span class="panel-title" title="Components selected for LCIA comparison">LCIA selections</span>-->
+        <!--<button type="button" class="btn btn-sm btn-success pull-right" title="Click to display LCIA results"-->
+                <!--ng-disabled="invalidSelection()" ng-click="plot.getResults()">-->
+            <!--Display Results-->
+        <!--</button>-->
+    <!--</div>-->
         <div id="selection-grid" ng-grid="gridOpts" class="gridStyle"></div>
-    </div>
 </div>
 <div class="row">
     <div ng-repeat="method in lciaMethods" class="col-md-4">
